# bitbang-hal-ng

./: Cargo.toml  README.md
src/: delay.rs  i2c.rs  lib.rs  serial.rs  spi.rs
tests/: drv8301.rs
